feat: clean up of native section and index page
Signed-off-by: jpwhitemn <jpwhite_mn@yahoo.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,7 +32,8 @@ nav:
         - './getting-started/Ch-GettingStartedGoDevelopers.md'
         - './getting-started/Ch-GettingStartedCDevelopers.md'
         - './getting-started/Ch-GettingStartedHybrid.md'
-        - './getting-started/Ch-NativeBuildAndRun.md'
+        - Native Build and Run Guides: './getting-started/quick-start/native/index.md'
+          - ./getting-started/quick-start/native/Ch-BuildRunOnLinuxDistro.md'
         - Application Functions SDK: './getting-started/ApplicationFunctionsSDK.md'
         - Device Services:
           - './getting-started/Ch-GettingStartedSDK.md'
