feat: fix mkdocs organization for native
Signed-off-by: jpwhitemn <jpwhite_mn@yahoo.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,8 +32,9 @@ nav:
         - './getting-started/Ch-GettingStartedGoDevelopers.md'
         - './getting-started/Ch-GettingStartedCDevelopers.md'
         - './getting-started/Ch-GettingStartedHybrid.md'
-        - Native Build and Run Guides: './getting-started/quick-start/native/index.md'
-          - ./getting-started/quick-start/native/Ch-BuildRunOnLinuxDistro.md'
+        - Native Build and Run Guides:
+          - './getting-started/quick-start/native/index.md'
+          - Build and Run on Linux: ./getting-started/quick-start/native/Ch-BuildRunOnLinuxDistro.md'
         - Application Functions SDK: './getting-started/ApplicationFunctionsSDK.md'
         - Device Services:
           - './getting-started/Ch-GettingStartedSDK.md'
