feat: add native Windows build to nav menu
Signed-off-by: jpwhitemn <jpwhite_mn@yahoo.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,6 +35,7 @@ nav:
         - Native Build and Run Guides:
           - './getting-started/native/Ch-BuildRunNative.md'
           - './getting-started/native/Ch-BuildRunOnLinuxDistro.md'
+          - './getting-started/native/Ch-BuildRunOnWindows.md'
         - Application Functions SDK: './getting-started/ApplicationFunctionsSDK.md'
         - Device Services:
           - './getting-started/Ch-GettingStartedSDK.md'
