--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -140,8 +140,9 @@ nav:
     - Application:
         - './api/applications/Ch-APIAppFunctionsSDK.md'
         - './api/applications/Ch-APIRulesEngine.md'
-  - Architectural Decision Records:
-    - './design/README.md'
+  - Use Cases & Designs:
+    - './design/Process.md'
+    # - './design/README.md'
     - './design/TOC.md'
     - Legacy:
       - './design/legacy-design/README.md'
