docs: add use cases and requirements to design process (#775)
* docs: add use case template

Signed-off-by: Farshid Tavakolizadeh <farshid.tavakolizadeh@canonical.com>

* docs: minor corrections

Signed-off-by: Farshid Tavakolizadeh <farshid.tavakolizadeh@canonical.com>

* docs: add software integrator. Allow other roles

Signed-off-by: Farshid Tavakolizadeh <farshid.tavakolizadeh@canonical.com>

* docs: add process details

Co-authored-by: jpwhitemn <jpwhite_mn@yahoo.com>
Signed-off-by: Farshid Tavakolizadeh <farshid.tavakolizadeh@canonical.com>

* docs: move templates to corresponding directories

Signed-off-by: Farshid Tavakolizadeh <farshid.tavakolizadeh@canonical.com>

* docs: simplify template and process diagram

Signed-off-by: Farshid Tavakolizadeh <farshid.tavakolizadeh@canonical.com>

* Revise process, change use-cases to ucr

Signed-off-by: Farshid Tavakolizadeh <farshid.tavakolizadeh@canonical.com>

* Update docs navigation tabs

Signed-off-by: Farshid Tavakolizadeh <farshid.tavakolizadeh@canonical.com>

* Update author READMEs

Signed-off-by: Farshid Tavakolizadeh <farshid.tavakolizadeh@canonical.com>

* Move ADR README.md to ./ADR/README

Signed-off-by: Farshid Tavakolizadeh <farshid.tavakolizadeh@canonical.com>

* Extend document titles, URL to records

Signed-off-by: Farshid Tavakolizadeh <farshid.tavakolizadeh@canonical.com>

* Remove commented navigation entry

Signed-off-by: Farshid Tavakolizadeh <farshid.tavakolizadeh@canonical.com>

* Consistent state values

Signed-off-by: Farshid Tavakolizadeh <farshid.tavakolizadeh@canonical.com>

* Add pending to changelog states

Signed-off-by: Farshid Tavakolizadeh <farshid.tavakolizadeh@canonical.com>

* Allow listing requirements without feature requests

Signed-off-by: Farshid Tavakolizadeh <farshid.tavakolizadeh@canonical.com>

* Fix minor formatting and template issues

Signed-off-by: Farshid Tavakolizadeh <farshid.tavakolizadeh@canonical.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -139,8 +139,8 @@ nav:
     - Application:
         - './api/applications/Ch-APIAppFunctionsSDK.md'
         - './api/applications/Ch-APIRulesEngine.md'
-  - Architectural Decision Records:
-    - './design/README.md'
+  - Use Cases & Designs:
+    - './design/Process.md'
     - './design/TOC.md'
     - Legacy:
       - './design/legacy-design/README.md'
