feat: Document API for Device SDK Go
Address documenation for
https://github.com/edgexfoundry/device-sdk-go/issues/1168

Signed-off-by: Leonard Goodell <leonard.goodell@intel.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -85,6 +85,8 @@ nav:
         - './microservices/device/Ch-DeviceServiceList.md'
         - './microservices/device/profile/Ch-DeviceProfile.md'
         - './microservices/device/sdk/Ch-DeviceSDK.md'
+        - Device SDK API:
+          -  './microservices/device/sdk/SDK-Go-API.md'
         - './microservices/device/virtual/Ch-VirtualDevice.md'
         - './microservices/device/V2Migration.md'
       - Application Services:
