ci: enable mkdoc macros
Signed-off-by: Bill Mahoney <bill.mahoney@intel.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -188,6 +188,9 @@ extra_javascript:
 - assets\javascripts\version-select.js
 plugins:
   - search
+  - macros:
+      include_yaml:
+        - template_macros.yaml
   - htmlproofer:
       enabled: !ENV [ENABLED_HTMLPROOFER, False]
       raise_error: True
