--- a/Dockerfile.docs
+++ b/Dockerfile.docs
@@ -17,7 +17,7 @@
 
 FROM python:3-slim
 
-RUN pip install mkdocs "mkdocs-material>=8.2" "mkdocs-htmlproofer-plugin>=0.8"
+RUN pip install mkdocs "mkdocs-material>=8.2" "mkdocs-htmlproofer-plugin>=0.8" "mkdocs-macros-plugin>=0.5"
 
 EXPOSE 8000
 
