feat: address EdgeX and Cloud Native computing
fixes: #641

address issues of support for Kubernetes, distributed systems, HA, 12 factor, and more

Signed-off-by: jpwhitemn <jpwhite_mn@yahoo.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -153,6 +153,7 @@ nav:
     - './general/ServicePorts.md'
     - './general/ContainerNames.md'
     - './general/ServiceConfiguration.md'
+    - './general/EdgeX_CN.md'
 markdown_extensions:
   - codehilite
   - admonition
