docs: added usb camera streaming guide
Signed-off-by: brianointel <brian.j.osburn@intel.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -106,6 +106,7 @@ nav:
   - Examples and Tutorials:
     - './examples/index.md'
     - './examples/Ch-ExamplesVirtualDeviceService.md'
+    - './examples/Ch-ExamplesUsbDeviceService.md'
     - './examples/Ch-ExamplesSendingAndConsumingBinary.md'
     - './examples/AppServiceExamples.md'
     - './examples/Ch-CommandingDeviceThroughRulesEngine.md'
