feat: add google analytics to the jakarta release docs
Signed-off-by: jpwhitemn <jpwhite_mn@yahoo.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,8 +12,6 @@ theme:
   name: 'material'
   logo: 'assets/logo_edgex_white.png'
   favicon: 'assets/logo_edgex.png'
-  analytics:
-    gtag: 'G-38531ZZHBN'
   features:
     - tabs
 nav:
@@ -164,6 +162,9 @@ extra:
       link: 'https://twitter.com/edgexfoundry'
     - icon: 'fontawesome/brands/linkedin'
       link: 'https://www.linkedin.com/company/edgexfoundry'
+  analytics:
+    provider: google
+    property: G-38531ZZHBN
 extra_css:
 - assets\stylesheets\version-select.css
 - assets\stylesheets\branding.css
