--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,9 +7,6 @@ site_url: 'https://edgexfoundry.github.io/edgex-docs/'
 repo_url: 'https://github.com/edgexfoundry/edgex-go'
 repo_name: 'edgex/edgex-go'
 copyright: 'Copyright &copy; 2020 EdgeX Foundry'
-google_analytics:
-  - 'UA-82811140-6'
-  - 'auto'
 strict: true
 theme:
   name: 'material'
@@ -143,6 +140,9 @@ extra:
       link: 'https://twitter.com/edgexfoundry'
     - icon: 'fontawesome/brands/linkedin'
       link: 'https://www.linkedin.com/company/edgexfoundry'
+  analytics:
+    provider: google
+    property: G-38531ZZHBN
 extra_css:
 - assets\stylesheets\version-select.css
 - assets\stylesheets\branding.css
