feat: update the google code for analytics
Signed-off-by: jpwhitemn <jpwhite_mn@yahoo.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,7 +8,7 @@ repo_url: 'https://github.com/edgexfoundry/edgex-go'
 repo_name: 'edgex/edgex-go'
 copyright: 'Copyright &copy; 2020 EdgeX Foundry'
 google_analytics:
-  - 'UA-82811140-6'
+  - 'G-38531ZZHBN'
   - 'auto'
 strict: false
 theme:
