--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,7 +10,7 @@ copyright: 'Copyright &copy; 2020 EdgeX Foundry'
 google_analytics:
   - 'G-38531ZZHBN'
   - 'auto'
-strict: true
+strict: false
 theme:
   name: 'material'
   logo: 'assets/logo_edgex_white.png'
