--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -114,6 +114,7 @@ nav:
     - './examples/AppServiceExamples.md'
     - './examples/Ch-CommandingDeviceThroughRulesEngine.md'
     - './examples/Ch-ExamplesModbusdatatypeconversion.md'
+    - './examples/Ch-OSImageWithEdgeX.md'
     - Adding a Device:
       - './examples/Ch-ExamplesAddingModbusDevice.md'
       - './examples/Ch-ExamplesAddingSNMPDevice.md'
