--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -66,6 +66,7 @@ nav:
         - './microservices/configuration/CommonEnvironmentVariables.md'
         - './microservices/configuration/ConfigurationAndRegistry.md'
         - './microservices/configuration/V2MigrationCommonConfig.md'
+      - './microservices/general/messagebus.md'
       - Core Services:
         - './microservices/core/Ch-CoreServices.md'
         - './microservices/core/data/Ch-CoreData.md'
@@ -197,6 +198,6 @@ plugins:
       enabled: !ENV [ENABLED_HTMLPROOFER, False]
       raise_error: True
       raise_error_excludes:
-        404: ['https://support.google.com/accounts/answer/185833?hl=en', 
+        404: ['https://support.google.com/accounts/answer/185833?hl=en',
               'https://support.google.com/accounts/answer/6010255?hl=en']
         429: ['*']
