feat: Document the SecretProvider API for app and device services
closes #847

Signed-off-by: Leonard Goodell <leonard.goodell@intel.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,6 +47,7 @@ nav:
   - Security:
     - './security/Ch-Security.md'
     - './security/Ch-SecretStore.md'
+    - './security/Ch-SecretProviderApi.md'
     - './security/Ch-APIGateway.md'
     - './security/Ch-Secure-MessageBus.md'
     - './security/Ch-Configuring-Add-On-Services.md'
