docs: DTO field validation
Document for the DTO validation mechanism, which includes:
- tag usage
- character restriction
- how to add new validation

Close #872

Signed-off-by: bruce <weichou1229@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,6 +30,7 @@ nav:
         - './getting-started/Ch-GettingStartedGoDevelopers.md'
         - './getting-started/Ch-GettingStartedCDevelopers.md'
         - './getting-started/Ch-GettingStartedHybrid.md'
+        - './getting-started/Ch-GettingStartedDTOValidation.md'
         - Native Build and Run Guides:
           - './getting-started/native/Ch-BuildRunNative.md'
           - './getting-started/native/Ch-BuildRunOnLinuxDistro.md'
