docs: DTO field validation (#891)
* docs: DTO field validation

Document for the DTO validation mechanism, which includes:
- tag usage
- character restriction
- how to add new validation

Close #872

Signed-off-by: bruce <weichou1229@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,7 @@ nav:
         - './getting-started/Ch-GettingStartedUsers.md'
         - './getting-started/Ch-GettingStartedDockerUsers.md'
         - './getting-started/Ch-GettingStartedSnapUsers.md'
+        - './getting-started/Ch-GettingStartedDTOValidation.md'
       - Developers:
         - './getting-started/Ch-GettingStartedDevelopers.md'
         - './getting-started/Ch-GettingStartedGoDevelopers.md'
