--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -132,19 +132,15 @@ nav:
       - 'walk-through/Ch-WalkthroughExporting.md'
   - API Reference:
     - Introduction: './api/Ch-APIIntroduction.md'
-    - Core:
-      - './api/core/Ch-APICoreCommand.md'
-      - './api/core/Ch-APICoreData.md'
-      - './api/core/Ch-APICoreMetadata.md'
-      - './api/core/Ch-APICoreConfigurationAndRegistry.md'
-    - Support:
-      - './api/support/Ch-APISupportNotifications.md'
-      - './api/support/Ch-APISupportScheduler.md'
-    - Device:
-        - './api/devices/Ch-APIDeviceSDK.md'
-    - Application:
-        - './api/applications/Ch-APIAppFunctionsSDK.md'
-        - './api/applications/Ch-APIRulesEngine.md'
+    -  './api/core/Ch-APICoreCommand.md'
+    - './api/core/Ch-APICoreData.md'
+    - './api/core/Ch-APICoreMetadata.md'
+    - './api/core/Ch-APICoreConfigurationAndRegistry.md'
+    - './api/support/Ch-APISupportNotifications.md'
+    - './api/support/Ch-APISupportScheduler.md'
+    - './api/devices/Ch-APIDeviceSDK.md'
+    - './api/applications/Ch-APIAppFunctionsSDK.md'
+    - './api/applications/Ch-APIRulesEngine.md'
   - Use Cases & Designs:
     - './design/Process.md'
     - './design/TOC.md'
@@ -185,14 +181,15 @@ extra:
     provider: google
     property: G-38531ZZHBN
 extra_css:
-- assets\stylesheets\version-select.css
-- assets\stylesheets\branding.css
-- assets\stylesheets\edgey.css
-- assets\stylesheets\newexample.css
+- assets/stylesheets/version-select.css
+- assets/stylesheets/branding.css
+- assets/stylesheets/edgey.css
+- assets/stylesheets/newexample.css
 extra_javascript:
-- assets\javascripts\version-select.js
+- assets/javascripts/version-select.js
 plugins:
   - search
+  - swagger-ui-tag
   - macros:
       include_yaml:
         - template_macros.yaml
