--- a/template_macros.yaml
+++ b/template_macros.yaml
@@ -1,3 +1,4 @@
-latest_released_version: '2.3.0'
-latest_release_name: 'levski'
-next_version: '3.0.0'
+latest_released_version: v2.3.0
+latest_release_name: levski
+dev_version: main
+api_version: v3
