feat: include version in site_url for sitemap.xml
Signed-off-by: Ernesto Ojeda <ernesto.ojeda@intel.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,10 +3,10 @@ docs_dir: ./docs_src
 site_dir: ./docs/2.3
 site_description: 'Documentation for use of EdgeX Foundry'
 site_author: 'Michael Johanson'
-site_url: 'https://docs.edgexfoundry.org/'
+site_url: 'https://docs.edgexfoundry.org/2.3'
 repo_url: 'https://github.com/edgexfoundry/edgex-go'
 repo_name: 'edgex/edgex-go'
-copyright: 'Copyright &copy; 2022 EdgeX Foundry'
+copyright: 'Copyright &copy; 2023 EdgeX Foundry'
 strict: false   # mkdocs-materials will prevent running on 0.0.0.0 otherwise (or have custom image)
 theme:
   name: 'material'
