fix: change robots.txt to include all sitemaps and remove disallow
fix sitemap for main or MN release to have correct URL references

Signed-off-by: jpwhitemn <jpwhite_mn@yahoo.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,7 @@ docs_dir: ./docs_src
 site_dir: ./docs/3.0
 site_description: 'Documentation for use of EdgeX Foundry'
 site_author: 'Michael Johanson'
-site_url: 'https://docs.edgexfoundry.org/'
+site_url: 'https://docs.edgexfoundry.org/3.0'
 repo_url: 'https://github.com/edgexfoundry/edgex-go'
 repo_name: 'edgex/edgex-go'
 copyright: 'Copyright &copy; 2022 EdgeX Foundry'
