fix: fix sitemap for Ireland release to have version in sitemap.xml
Signed-off-by: jpwhitemn <jpwhite_mn@yahoo.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,7 @@ docs_dir: ./docs_src
 site_dir: ./docs/2.0
 site_description: 'Documentation for use of EdgeX Foundry'
 site_author: 'Michael Johanson'
-site_url: 'https://edgexfoundry.github.io/edgex-docs/'
+site_url: 'https://edgexfoundry.github.io/edgex-docs/2.0'
 repo_url: 'https://github.com/edgexfoundry/edgex-go'
 repo_name: 'edgex/edgex-go'
 copyright: 'Copyright &copy; 2020 EdgeX Foundry'
