feat(security): Update docs for new proxy implementation
Signed-off-by: Bryon Nevis <bryon.nevis@intel.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,6 +48,7 @@ nav:
   - Security:
     - './security/Ch-Security.md'
     - './security/Ch-SecretStore.md'
+    - './security/Ch-Authenticating.md'
     - './security/Ch-SecretProviderApi.md'
     - './security/Ch-APIGateway.md'
     - './security/Ch-Secure-MessageBus.md'
