docs: adapt ONVIF for levski
Signed-off-by: Darr, Christian <christian.darr@intel.com>

--- a/Dockerfile.docs
+++ b/Dockerfile.docs
@@ -17,7 +17,7 @@
 
 FROM python:3-slim
 
-RUN pip install mkdocs "mkdocs-material==8.5.8" "mkdocs-htmlproofer-plugin>=0.8" "mkdocs-macros-plugin>=0.5"
+RUN pip install mkdocs "mkdocs-material==8.5.8" "mkdocs-htmlproofer-plugin>=0.8" "mkdocs-macros-plugin>=0.5" "mkdocs-mermaid2-plugin"
 
 EXPOSE 8000
 
