fix: Change examples to minor semvers
Co-authored-by: Lenny Goodell <leonard.goodell@intel.com>
Signed-off-by: Farshid Tavakolizadeh <farshid.tavakolizadeh@canonical.com>

--- a/template_macros.yaml
+++ b/template_macros.yaml
@@ -4,10 +4,10 @@
 #
 # In the main branch, it should always be set to "main".
 # Upon releases and in edgex-docs release branches (e.g. levski, minnesota),
-# the value should be replaced with the git tag that is the full semantic
+# the value should be replaced with the git tag that is the minor semantic
 # version.
 #
-# Examples: main, v2.3.0, v2.3.1, v3.0.0
+# Examples: main, v3.0, v3.1
 version: main
 
 # api_version is the major API version
