refactor: Use simplified macros (#1000)
Signed-off-by: Farshid Tavakolizadeh <farshid.tavakolizadeh@canonical.com>

--- a/template_macros.yaml
+++ b/template_macros.yaml
@@ -1,4 +1,16 @@
-latest_released_version: v2.3.0
-latest_release_name: levski
-dev_version: main
+# version is the git branch or tag
+#
+# Its value is used in Github URLs
+#
+# In the main branch, it should always be set to "main".
+# Upon releases and in edgex-docs release branches (e.g. levski, minnesota),
+# the value should be replaced with the git tag that is the minor semantic
+# version.
+#
+# Examples: main, v3.0, v3.1
+version: main
+
+# api_version is the major API version
+#
+# Examples: v2, v3
 api_version: v3
