docs: adapt ONVIF docs for levski (#1018)
* docs: adapt ONVIF for levski

Signed-off-by: Darr, Christian <christian.darr@intel.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -86,12 +86,44 @@ nav:
         - './microservices/system-management/executor/Ch_SysMgmtExecutor.md'
       - Devices Services:
         - './microservices/device/Ch-DeviceServices.md'
-        - './microservices/device/Ch-DeviceServiceList.md'
         - './microservices/device/profile/Ch-DeviceProfile.md'
         - './microservices/device/sdk/Ch-DeviceSDK.md'
         - Device SDK API:
           -  './microservices/device/sdk/SDK-Go-API.md'
-        - './microservices/device/virtual/Ch-VirtualDevice.md'
+        - Supported Device Services:
+          - './microservices/device/Ch-DeviceServiceList.md'
+          - Device Onvif Camera:
+            - './microservices/device/supported/device-onvif-camera/General.md'
+            - Walkthrough:
+              - './microservices/device/supported/device-onvif-camera/Walkthrough/setup.md'
+              - './microservices/device/supported/device-onvif-camera/Walkthrough/deployment.md'
+              - './microservices/device/supported/device-onvif-camera/Walkthrough/general-usage.md'
+              - './microservices/device/supported/device-onvif-camera/Walkthrough/custom-build.md'
+            - Supplementary Information:
+              - ONVIF Protocol:
+                - './microservices/device/supported/device-onvif-camera/supplementary-info/ONVIF-protocol.md'
+                - './microservices/device/supported/device-onvif-camera/supplementary-info/onvif-user-authentication.md'
+              - Features: 
+                - './microservices/device/supported/device-onvif-camera/supplementary-info/custom-metadata-feature.md'
+                - './microservices/device/supported/device-onvif-camera/supplementary-info/friendlyname-mac.md'
+                - './microservices/device/supported/device-onvif-camera/supplementary-info/device-status.md'
+                - './microservices/device/supported/device-onvif-camera/supplementary-info/auto-discovery.md'
+                - './microservices/device/supported/device-onvif-camera/supplementary-info/credentials.md' 
+                - './microservices/device/supported/device-onvif-camera/supplementary-info/reboot-needed.md'
+              - API Reference:
+                - './microservices/device/supported/device-onvif-camera/supplementary-info/api-analytic-support.md'
+                - './microservices/device/supported/device-onvif-camera/supplementary-info/api-event-handling.md'
+                - './microservices/device/supported/device-onvif-camera/supplementary-info/api-usage-user-handling.md'
+              - Utility:
+                - './microservices/device/supported/device-onvif-camera/supplementary-info/test-with-postman.md'
+                - './microservices/device/supported/device-onvif-camera/supplementary-info/utility-scripts.md'
+              - Miscellaneous:
+                - './microservices/device/supported/device-onvif-camera/supplementary-info/control-plane-events.md'
+                - './microservices/device/supported/device-onvif-camera/supplementary-info/getting-started-with-docker-security.md'
+                - './microservices/device/supported/device-onvif-camera/supplementary-info/ws-discovery.md'
+                - './microservices/device/supported/device-onvif-camera/supplementary-info/onvif-footnotes.md'
+          - Device Virtual:
+            - './microservices/device/supported/device-virtual/Ch-VirtualDevice.md'
         - './microservices/device/V2Migration.md'
       - Application Services:
         - Introduction: './microservices/application/ApplicationServices.md'
@@ -195,6 +227,7 @@ extra_javascript:
 - assets\javascripts\version-select.js
 plugins:
   - search
+  - mermaid2
   - macros:
       include_yaml:
         - template_macros.yaml
