docs: initial commit for usb
Signed-off-by: Darr, Christian <christian.darr@intel.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -124,6 +124,11 @@ nav:
                 - './microservices/device/supported/device-onvif-camera/supplementary-info/getting-started-with-docker-security.md'
                 - './microservices/device/supported/device-onvif-camera/supplementary-info/ws-discovery.md'
                 - './microservices/device/supported/device-onvif-camera/supplementary-info/onvif-footnotes.md'
+          - Device USB Camera:
+              - Walkthrough:
+              - Supplementary Information:
+                - '/microservices/device/supported/device-usb-camera/supplementary-info/advanced-options.md'
+                - '/microservices/device/supported/device-usb-camera/supplementary-info/discovery.md'
           - Device Virtual:
             - './microservices/device/supported/device-virtual/Ch-VirtualDevice.md'
         - './microservices/device/V3Migration.md'
