docs: set docs structure
Signed-off-by: Darr, Christian <christian.darr@intel.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -125,10 +125,15 @@ nav:
                 - './microservices/device/supported/device-onvif-camera/supplementary-info/ws-discovery.md'
                 - './microservices/device/supported/device-onvif-camera/supplementary-info/onvif-footnotes.md'
           - Device USB Camera:
+              - './microservices/device/supported/device-usb-camera/General.md'
               - Walkthrough:
+                - './microservices/device/supported/device-usb-camera/walkthrough/setup.md'
+                - './microservices/device/supported/device-usb-camera/walkthrough/deployment.md'
+                - './microservices/device/supported/device-usb-camera/walkthrough/general-usage.md'
+                - './microservices/device/supported/device-usb-camera/walkthrough/custom-build.md'
               - Supplementary Information:
-                - '/microservices/device/supported/device-usb-camera/supplementary-info/advanced-options.md'
-                - '/microservices/device/supported/device-usb-camera/supplementary-info/discovery.md'
+                - './microservices/device/supported/device-usb-camera/supplementary-info/discovery.md'
+                - './microservices/device/supported/device-usb-camera/supplementary-info/advanced-options.md'   
           - Device Virtual:
             - './microservices/device/supported/device-virtual/Ch-VirtualDevice.md'
         - './microservices/device/V3Migration.md'
