feat: add camera-management docs
Signed-off-by: Darr, Christian <christian.darr@intel.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -155,7 +155,9 @@ nav:
     - './examples/index.md'
     - './examples/Ch-ExamplesVirtualDeviceService.md'
     - './examples/Ch-ExamplesSendingAndConsumingBinary.md'
-    - './examples/AppServiceExamples.md'
+    - App Service Examples:
+      - './examples/AppServiceExamples.md'
+      - './examples/app-service-examples/camera-management/Ch-CameraManagement.md'
     - './examples/Ch-CommandingDeviceThroughRulesEngine.md'
     - './examples/Ch-ExamplesModbusdatatypeconversion.md'
     - './examples/Ch-OSImageWithEdgeX.md'
