fix: Adjust profile and devices files used in Getting Started Device SDK Go
fixes #1131

Signed-off-by: Leonard Goodell <leonard.goodell@intel.com>

--- a/docs_src/getting-started/random-generator.yaml
+++ b/docs_src/getting-started/random-generator.yaml
@@ -2,13 +2,11 @@ name: "RandNum-Device"
 manufacturer: "Dell Technologies"
 model: "1"
 labels:
- - "random"
- - "test"
+  - "random"
+  - "test"
 description: "random number generator to simulate a device"
-
 deviceResources:
-  -
-    name: "RandomNumber"
+  - name: "RandomNumber"
     description: "generated random number"
     attributes:
       { type: "random" }
