--- a/Dockerfile.docs
+++ b/Dockerfile.docs
@@ -17,7 +17,7 @@
 
 FROM python:3.10-slim
 
-RUN pip install mkdocs \
+RUN pip install "mkdocs==1.4.3" \
     "mkdocs-material==8.5.8" \
     "mkdocs-htmlproofer-plugin>=0.8" \
     "mkdocs-macros-plugin>=0.5" \
